kubes/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genai-app
  namespace: genai
  labels:
    app: genai-app
spec:
  selector:
    app: genai-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
